--- a/scss/layouts/_forms.scss
+++ b/scss/layouts/_forms.scss
@@ -3,14 +3,14 @@
 }
 
 #fnac {
-    background-color: black;
+    background-color: $color-black;
     color: $color-white;
     border: 2px solid $color-white;
     border-radius: 10px;
 }
 
 #edad {
-    background-color: black;
+    background-color: $color-black;
     color: $color-white;
     border: 2px solid $color-white;
     border-radius: 10px;
@@ -19,21 +19,21 @@
 .form-control {
     display: block;
     padding: 0;
-    font-size: 1rem;
+    font-size: $font-size-sm;
     font-weight: 400;
     line-height: 1;
-    background-color: rgb(0, 0, 0);
+    background-color: $color-black;
     width: 100%;
     color: $color-white !important;
     border: solid 2px $color-white;
     border-radius: 10px;
-        &focus{
+        &:focus{
             display: block;
             padding: 0;
-            font-size: 1rem;
+            font-size: $font-size-sm;
             font-weight: 400;
             line-height: 1;
-            background-color: rgb(0, 0, 0);
+            background-color: $color-black;
             width: 100%;
             color: $color-white !important;
             border: solid 2px $color-white;
@@ -59,11 +59,11 @@
         display: inline-block;
         width: 30%;
         padding: 0;
-        font-size: 1rem;
+        font-size: $font-size-sm;
         font-weight: 400;
         line-height: 1;
         color: $color-white !important;
-        background-color: black;
+        background-color: $color-black;
         border: solid 2px $color-white;
         border-radius: 10px;
 }
