--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -1,37 +1,37 @@
 .navbar-brand {
-    font-size: 1.3rem;
+    font-size: $font-size-nav;
     color: rgb(255, 46, 185);
     text-decoration: none;
     white-space: nowrap;
-    border: 3px solid black;
+    border: 3px solid $color-black;
     border-radius: 10px;
-    background-color: rgb(0, 0, 0);
-        &hover{
-            color: rgb(0, 0, 0);
+    background-color: $color-black;
+        &:hover{
+            color: $color-black;
             background-color: rgb(255, 46, 185);
     }
 }
 
 
 .navbar-expand-lg .navbar-nav .nav-link {
-    font-size: 1.3rem;
+    font-size: $font-size-nav;
     color: rgb(255, 46, 185);
     text-decoration: none;
     white-space: nowrap;
-    border: 3px solid black;
+    border: 3px solid $color-black;
     border-radius: 10px;
-    background-color: rgb(0, 0, 0);
+    background-color: $color-black;
     margin: 10px;
-        &hover{
-            color: rgb(0, 0, 0);
+        &:hover{
+            color: $color-black;
             background-color: rgb(255, 46, 185);
         }
 }
 
 .navbar-toggler {
     line-height: 1;
-    color: black;
-    background-color: rgb(255, 46, 185);
-    border: black solid 2px;
+    color: $color-black;
+    background-color: $color-pink;
+    border: $color-black solid 2px;
     border-radius: 10px;
 }
