--- a/scss/themes/_themes.scss
+++ b/scss/themes/_themes.scss
@@ -3,43 +3,43 @@
 }
 
 .bg-primary {
-    background-color: #ff65d8 !important;
-    color: rgb(94, 0, 66);
+    background-color: $color-lightpink !important;
+    color: $color-violet;
 }
 
 .bg-danger {
-    background-color: #ff65d8 !important
+    background-color: $color-lightpink !important
 }
 
 .text-light {
-    color: white !important;
+    color: $color-white !important;
 }
 
 .link-light {
-    color: white !important;
-    -webkit-text-decoration-color: white !important;
-    text-decoration-color: white !important;
+    color: $color-white !important;
+    -webkit-text-decoration-color: $color-white !important;
+    text-decoration-color: $color-white !important;
 }
 
 .text-black {
-    color: black !important;
+    color: $color-black !important;
 }
 
 
 .text-info-emphasis {
-    color: black !important;
-    font-size: 0.7rem;
+    color: $color-black !important;
+    font-size: $font-size-xs;
     width: 100%;
     height: 60%;
 }
 
 
 .link-warning {
-    color: rgb(255, 46, 185) !important;
-    -webkit-text-decoration-color: rgb(255, 46, 185) !important;
-    text-decoration-color: rgb(255, 46, 185) !important;
-        &hover{
-            color: rgb(255, 255, 255) !important;
-            text-decoration-color: rgb(255, 255, 255) !important;
+    color: $color-pink !important;
+    -webkit-text-decoration-color: $color-pink !important;
+    text-decoration-color: $color-pink !important;
+        &:hover{
+            color: $color-white !important;
+            text-decoration-color: $color-white !important;
         }
 }
