--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "./utilities/variables";
+@import "./maps/maps";
 @import "./globals/resets";
 @import "./layouts/footer";
 @import "./layouts/forms";
