--- a/scss/layouts/_forms.scss
+++ b/scss/layouts/_forms.scss
@@ -3,16 +3,16 @@
 }
 
 #fnac {
-    background-color: $color-black;
-    color: $color-white;
-    border: 2px solid $color-white;
+    background-color: map-get($colors , color-black);
+    color: map-get($colors , color-white);
+    border: 2px solid map-get($colors , color-white);
     border-radius: 10px;
 }
 
 #edad {
-    background-color: $color-black;
-    color: $color-white;
-    border: 2px solid $color-white;
+    background-color: map-get($colors , color-black);
+    color: map-get($colors , color-white);
+    border: 2px solid map-get($colors , color-white);
     border-radius: 10px;
 }
 
@@ -22,10 +22,10 @@
     font-size: $font-size-sm;
     font-weight: 400;
     line-height: 1;
-    background-color: $color-black;
+    background-color: map-get($colors , color-black);
     width: 100%;
-    color: $color-white !important;
-    border: solid 2px $color-white;
+    color: map-get($colors , color-white) !important;
+    border: solid 2px map-get($colors , color-white);
     border-radius: 10px;
         &:focus{
             display: block;
@@ -33,17 +33,17 @@
             font-size: $font-size-sm;
             font-weight: 400;
             line-height: 1;
-            background-color: $color-black;
+            background-color: map-get($colors , color-black);
             width: 100%;
-            color: $color-white !important;
-            border: solid 2px $color-white;
+            color: map-get($colors , color-white) !important;
+            border: solid 2px map-get($colors , color-white);
             border-radius: 10px;
         }
 }
 
 .form-text {
     margin: 0;
-    color: $color-white !important;
+    color: map-get($colors , color-white) !important;
 }
 
 .form-label {
@@ -52,7 +52,7 @@
 
 .form-control-color:not(:disabled):not([readonly]) {
     cursor: pointer;
-    color: $color-white;
+    color: map-get($colors , color-white);
 }
 
 .form-select {
@@ -62,9 +62,9 @@
         font-size: $font-size-sm;
         font-weight: 400;
         line-height: 1;
-        color: $color-white !important;
-        background-color: $color-black;
-        border: solid 2px $color-white;
+        color: map-get($colors , color-white) !important;
+        background-color: map-get($colors , color-black);
+        border: solid 2px map-get($colors , color-white);
         border-radius: 10px;
 }
 
