--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,6 +1,6 @@
 header {
     height: 15vh;
-    border-bottom: solid $color-black 5px;
+    border-bottom: solid map-get($colors , color-black) 5px;
 }
 
 header div img {
