--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -1,37 +1,37 @@
 .navbar-brand {
     font-size: $font-size-nav;
-    color: rgb(255, 46, 185);
+    color: map-get($colors , color-pink);
     text-decoration: none;
     white-space: nowrap;
-    border: 3px solid $color-black;
+    border: 3px solid map-get($colors , color-black);
     border-radius: 10px;
-    background-color: $color-black;
+    background-color: map-get($colors , color-black)lack;
         &:hover{
-            color: $color-black;
-            background-color: rgb(255, 46, 185);
+            color: map-get($colors , color-black);
+            background-color: map-get($colors , color-pink);
     }
 }
 
 
 .navbar-expand-lg .navbar-nav .nav-link {
     font-size: $font-size-nav;
-    color: rgb(255, 46, 185);
+    color: map-get($colors , color-pink);
     text-decoration: none;
     white-space: nowrap;
-    border: 3px solid $color-black;
+    border: 3px solid map-get($colors , color-black);
     border-radius: 10px;
-    background-color: $color-black;
+    background-color: map-get($colors , color-black);
     margin: 10px;
         &:hover{
-            color: $color-black;
-            background-color: rgb(255, 46, 185);
+            color: map-get($colors , color-black);
+            background-color: map-get($colors , color-pink);
         }
 }
 
 .navbar-toggler {
     line-height: 1;
-    color: $color-black;
-    background-color: $color-pink;
-    border: $color-black solid 2px;
+    color: map-get($colors , color-black);
+    background-color: map-get($colors , color-pink);
+    border: map-get($colors , color-black) solid 2px;
     border-radius: 10px;
 }
