--- a/scss/themes/_themes.scss
+++ b/scss/themes/_themes.scss
@@ -3,31 +3,31 @@
 }
 
 .bg-primary {
-    background-color: $color-lightpink !important;
-    color: $color-violet;
+    background-color: map-get($colors , color-lightpink) !important;
+    color: map-get($colors , color-violet);
 }
 
 .bg-danger {
-    background-color: $color-lightpink !important
+    background-color: map-get($colors , color-lightpink) !important
 }
 
 .text-light {
-    color: $color-white !important;
+    color: map-get($colors , color-white) !important;
 }
 
 .link-light {
-    color: $color-white !important;
-    -webkit-text-decoration-color: $color-white !important;
-    text-decoration-color: $color-white !important;
+    color: map-get($colors , color-white) !important;
+    -webkit-text-decoration-color: map-get($colors , color-white) !important;
+    text-decoration-color: map-get($colors , color-white) !important;
 }
 
 .text-black {
-    color: $color-black !important;
+    color: map-get($colors , color-black) !important;
 }
 
 
 .text-info-emphasis {
-    color: $color-black !important;
+    color: map-get($colors , color-black) !important;
     font-size: $font-size-xs;
     width: 100%;
     height: 60%;
@@ -35,11 +35,11 @@
 
 
 .link-warning {
-    color: $color-pink !important;
-    -webkit-text-decoration-color: $color-pink !important;
-    text-decoration-color: $color-pink !important;
+    color: map-get($colors , color-pink) !important;
+    -webkit-text-decoration-color: map-get($colors , color-pink) !important;
+    text-decoration-color: map-get($colors , color-pink) !important;
         &:hover{
-            color: $color-white !important;
-            text-decoration-color: $color-white !important;
+            color: map-get($colors , color-white) !important;
+            text-decoration-color: map-get($colors , color-white) !important;
         }
 }
