--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,15 +1,12 @@
-// COLORES
 
 $bg-primary:rgb(119, 0, 119);
-$color-white: white;
-$color-black: black;
-$color-lightpink: #ff65d8;
-$color-pink: rgb(255, 46, 185);
-$color-violet: rgb(94, 0, 66);
 
-// FONTS
+
+// FONT STYLE
 
 $font-primary: Verdana, Geneva, Tahoma, sans-serif;
 $font-size-xs:0.7rem;
 $font-size-sm: 1rem;
 $font-size-nav: 1.3rem;
+
+$text-center: center;
