--- a/scss/views/_nominaciones.scss
+++ b/scss/views/_nominaciones.scss
@@ -1,15 +1,15 @@
 .table {
-    text-align: center;
-    background-color: $color-lightpink !important;
+    text-align: $text-center;
+    background-color: map-get($colors , color-lightpink) !important;
     width: 100%;
-    border-color: var(--bs-table-border-color);
+    border-color: map-get($colors , color-black);
     margin: 0;
     padding: 0;
 }
 
 .table-primary {
-    text-align: center;
-    background-color: $color-lightpink;
-    color: $color-black;
-    border-color: $color-black;
+    text-align: $text-center;
+    background-color: map-get($colors , color-lightpink);
+    color: map-get($colors , color-black);
+    border-color: map-get($colors , color-black);
 }
