--- a/scss/maps/_maps.scss
+++ b/scss/maps/_maps.scss
@@ -5,3 +5,9 @@ $colors: (
     color-pink: rgb(255, 46, 185),
     color-violet: rgb(94, 0, 66),
 );
+
+$font-size: (
+    font-xs:0.7rem,
+    font-sm: 1rem,
+    font-nav: 1.3rem
+)
