--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -1,5 +1,5 @@
 .navbar-brand {
-    font-size: $font-size-nav;
+    font-size: map-get($font-size , font-nav);
     color: map-get($colors , color-pink);
     text-decoration: none;
     white-space: nowrap;
@@ -14,7 +14,7 @@
 
 
 .navbar-expand-lg .navbar-nav .nav-link {
-    font-size: $font-size-nav;
+    font-size: map-get($font-size , font-nav);;
     color: map-get($colors , color-pink);
     text-decoration: none;
     white-space: nowrap;
