--- a/scss/themes/_themes.scss
+++ b/scss/themes/_themes.scss
@@ -28,7 +28,7 @@
 
 .text-info-emphasis {
     color: map-get($colors , color-black) !important;
-    font-size: $font-size-xs;
+    font-size: map-get($font-size , font-xs);;
     width: 100%;
     height: 60%;
 }
