--- a/css/style.css
+++ b/css/style.css
@@ -49,14 +49,7 @@ footer {
   height: 100px;
 }
 
-#fnac {
-  background-color: black;
-  color: white;
-  border: 2px solid white;
-  border-radius: 10px;
-}
-
-#edad {
+#fnac, #edad {
   background-color: black;
   color: white;
   border: 2px solid white;
@@ -124,21 +117,7 @@ header div img {
   height: 100%;
 }
 
-.navbar-brand {
-  font-size: 1.3rem;
-  color: rgb(255, 46, 185);
-  text-decoration: none;
-  white-space: nowrap;
-  border: 3px solid black;
-  border-radius: 10px;
-  background-color: black lack;
-}
-.navbar-brand:hover {
-  color: black;
-  background-color: rgb(255, 46, 185);
-}
-
-.navbar-expand-lg .navbar-nav .nav-link {
+.navbar-brand, .navbar-expand-lg .navbar-nav .nav-link {
   font-size: 1.3rem;
   color: rgb(255, 46, 185);
   text-decoration: none;
@@ -148,7 +127,7 @@ header div img {
   background-color: black;
   margin: 10px;
 }
-.navbar-expand-lg .navbar-nav .nav-link:hover {
+.navbar-brand:hover, .navbar-expand-lg .navbar-nav .nav-link:hover {
   color: black;
   background-color: rgb(255, 46, 185);
 }
@@ -224,20 +203,17 @@ section {
   color: rgb(255, 46, 185);
 }
 
-.table {
-  text-align: center;
-  background-color: #ff65d8 !important;
-  width: 100%;
-  border-color: black;
-  margin: 0;
-  padding: 0;
-}
-
-.table-primary {
+.table-primary, .table {
   text-align: center;
   background-color: #ff65d8;
   color: black;
   border-color: black;
+}
+
+.table {
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
