--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@ main {
 }
 
 #contenedor_imagenes {
+  display: flex;
+  justify-content: space-evenly;
   width: 100%;
   text-align: center;
   margin-top: 0px;
@@ -52,7 +54,9 @@ footer {
 #fnac, #edad {
   background-color: black;
   color: white;
-  border: 2px solid white;
+  border-width: 2px;
+  border-style: solid;
+  border-color: white;
   border-radius: 10px;
 }
 
@@ -65,7 +69,9 @@ footer {
   background-color: black;
   width: 100%;
   color: white !important;
-  border: solid 2px white;
+  border-width: 2px;
+  border-style: solid;
+  border-color: white;
   border-radius: 10px;
 }
 .form-control:focus {
@@ -77,7 +83,9 @@ footer {
   background-color: black;
   width: 100%;
   color: white !important;
-  border: solid 2px white;
+  border-width: 2px;
+  border-style: solid;
+  border-color: white;
   border-radius: 10px;
 }
 
@@ -104,7 +112,9 @@ footer {
   line-height: 1;
   color: white !important;
   background-color: black;
-  border: solid 2px white;
+  border-width: 2px;
+  border-style: solid;
+  border-color: white;
   border-radius: 10px;
 }
 
@@ -122,7 +132,9 @@ header div img {
   color: rgb(255, 46, 185);
   text-decoration: none;
   white-space: nowrap;
-  border: 3px solid black;
+  border-width: 3px;
+  border-style: solid;
+  border-color: black;
   border-radius: 10px;
   background-color: black;
   margin: 10px;
@@ -136,11 +148,16 @@ header div img {
   line-height: 1;
   color: black;
   background-color: rgb(255, 46, 185);
-  border: black solid 2px;
+  border-width: 2px;
+  border-style: solid;
+  border-color: black;
   border-radius: 10px;
 }
 
 aside {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   height: 75vh;
 }
 
@@ -195,11 +212,16 @@ section {
 .btn-primary {
   color: white !important;
   background-color: black !important;
-  border: solid 2px white;
+  border-width: 2px;
+  border-style: solid;
+  border-color: white;
   border-radius: 10px;
 }
 .btn-primary:hover {
-  border: solid 2px rgb(119, 0, 119);
+  border-width: 2px;
+  border-style: solid;
+  border-color: rgb(119, 0, 119);
+  border-radius: 10px;
   color: rgb(255, 46, 185);
 }
 
