--- a/scss/layouts/_forms.scss
+++ b/scss/layouts/_forms.scss
@@ -5,8 +5,7 @@
 #fnac {
     background-color: map-get($colors , color-black);
     color: map-get($colors , color-white);
-    border: 2px solid map-get($colors , color-white);
-    border-radius: 10px;
+    @include border (2px, solid, map-get($colors, color-white), 10px);
 }
 
 #edad {
@@ -22,8 +21,7 @@
     background-color: map-get($colors , color-black);
     width: 100%;
     color: map-get($colors , color-white) !important;
-    border: solid 2px map-get($colors , color-white);
-    border-radius: 10px;
+    @include border (2px, solid, map-get($colors, color-white), 10px);
         &:focus{
             display: block;
             padding: 0;
@@ -33,8 +31,7 @@
             background-color: map-get($colors , color-black);
             width: 100%;
             color: map-get($colors , color-white) !important;
-            border: solid 2px map-get($colors , color-white);
-            border-radius: 10px;
+            @include border (2px, solid, map-get($colors, color-white), 10px);
         }
 }
 
@@ -61,7 +58,6 @@
         line-height: 1;
         color: map-get($colors , color-white) !important;
         background-color: map-get($colors , color-black);
-        border: solid 2px map-get($colors , color-white);
-        border-radius: 10px;
+        @include border (2px, solid, map-get($colors, color-white), 10px);
 }
 
