--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -3,8 +3,7 @@
     color: map-get($colors , color-pink);
     text-decoration: none;
     white-space: nowrap;
-    border: 3px solid map-get($colors , color-black);
-    border-radius: 10px;
+    @include border (3px, solid, map-get($colors, color-black), 10px);
     background-color: map-get($colors , color-black);
     margin: 10px;
         &:hover{
@@ -22,6 +21,5 @@
     line-height: 1;
     color: map-get($colors , color-black);
     background-color: map-get($colors , color-pink);
-    border: map-get($colors , color-black) solid 2px;
-    border-radius: 10px;
+    @include border (2px, solid, map-get($colors, color-black), 10px);
 }
