--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "./utilities/variables";
+@import "./mixins/mixins";
 @import "./maps/maps";
 @import "./globals/resets";
 @import "./layouts/footer";
@@ -8,4 +9,5 @@
 @import "./views/home";
 @import "./themes/themes";
 @import "./buttons/btn";
-@import "./views/nominaciones"
+@import "./views/nominaciones";
+
