--- a/scss/views/_nominaciones.scss
+++ b/scss/views/_nominaciones.scss
@@ -3,7 +3,7 @@
     text-align: $text-center;
     background-color: map-get($colors , color-lightpink);
     color: map-get($colors , color-black);
-    border-color: map-get($colors , color-black);
+    @include border (null, null, map-get($colors, color-black), null);
 }
 
 .table {
