--- a/scss/globals/_resets.scss
+++ b/scss/globals/_resets.scss
@@ -14,6 +14,10 @@ main {
     height: 75vh;
 }
 
+article {
+    @include flex-row-center;
+}
+
 #imagen_inicio{ 
     img{
         width: 250px;
@@ -22,17 +26,26 @@ main {
 }
 
 #contenedor_imagenes{
-    @include flex-space-evenly;
-    width: 100%;
-    text-align: $text-center;
-    margin-top: 0px;
+    display: flex;
+    width: 170px;
+    height: 160px;
+    
 }
 
 #contenedor_imagenes {
     img {
-        width: 170px;
-        height: 150px;
-        display: inline-block;
+        
+        width: 0px;
+        flex-grow: 1;
+        object-fit: cover;
+        opacity: .8;
+        transition: .5s ease;
+        &:hover{
+            cursor: crosshair;
+            width: 100px;
+            opacity: 1;
+            filter: contrast(120%);
+        }
     }
 }
 
