--- a/css/style.css
+++ b/css/style.css
@@ -46,16 +46,13 @@ article {
 }
 
 .list-group-item {
+  position: static;
   border: rgb(255, 46, 185) solid 1px;
   padding: 0;
   list-style-type: none;
   text-decoration: none;
   color: rgb(255, 46, 185) !important;
   background-color: black;
-}
-
-h1 {
-  transform: skew(170deg);
 }
 
 footer {
@@ -137,6 +134,7 @@ footer {
 header {
   height: 15vh;
   border-bottom: solid black 5px;
+  z-index: 10;
 }
 
 header div img {
