--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 
 body {
   height: 100vh;
-  overflow: hidden;
 }
 
 main {
@@ -56,7 +55,7 @@ article {
 }
 
 footer {
-  height: 10vh;
+  height: 11vh;
   border-top: solid black 5px;
 }
 
@@ -255,6 +254,46 @@ p {
   width: 100%;
   margin: 0;
   padding: 0;
+}
+
+@media (max-width: 576px) {
+  main {
+    height: 80vh;
+  }
+  footer {
+    height: 25vh;
+    font-size: 0.7rem;
+  }
+  #imagen_inicio img {
+    width: 120px;
+    height: 120px;
+  }
+  aside {
+    height: auto;
+  }
+  header div img {
+    display: none;
+  }
+  header nav {
+    position: relative;
+    top: -80px;
+  }
+  section p {
+    font-size: 0.9rem;
+  }
+}
+@media (min-width: 1024px) {
+  #imagen_inicio img {
+    width: 350px;
+    height: 350px;
+    margin-left: 20px;
+  }
+  main div h1 {
+    font-size: 3rem;
+  }
+  section p {
+    font-size: 2rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
