--- a/scss/media/_mediaqueries.scss
+++ b/scss/media/_mediaqueries.scss
@@ -1,5 +1,15 @@
 
-// Small devices (landscape phones, 576px and up)
+@media (max-width:375px){
+    legend{
+        font-size: 1rem;
+    }
+    label{
+        font-size: 0.8rem;
+    }
+}
+
+
+
 @media (max-width: 576px) {
     main{
         height: 80vh;
@@ -40,31 +50,12 @@
     }
 }
 
-// @media (min-width:425px){
-//     #contenedor_imagenes{
-//         display: flex;
-//         width: 300px;
-//         height: 270px;
-        
-//     }
-    
-//     #contenedor_imagenes {
-//         img {
-            
-//             width: 0px;
-//             flex-grow: 1;
-//             object-fit: cover;
-//             opacity: .8;
-//             transition: .5s ease;
-//             &:hover{
-//                 cursor: crosshair;
-//                 width: 200px;
-//                 opacity: 1;
-//                 filter: contrast(120%);
-//             }
-//         }
-//     }
-// }
+@media (max-width:425px){
+
+    table{
+        font-size: 0.6rem;
+    }
+}
 
 
 @media (min-width: 1024px) {
@@ -83,7 +74,7 @@
 
     section
         p{
-            font-size: 2rem;
+            font-size: 1rem;
         }
     
 }
